Added some autoscrolling functionality, and got the twitter/github links set up...about to start on creating a modal for when the user clicks on the email icon

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 					<li><a href="#" class="text_link">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#" class="link_icon"><span class="fa fa-envelope fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Email"></span></a></li>
-					<li><a href="#" class="link_icon"><span class="fa fa-twitter fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Twitter"></span></a></li>
-					<li><a href="#" class="link_icon"><span class="fa fa-github fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Github"></span></a></li>
+					<li><a href="#" id="mail_icon" class="link_icon"><span class="fa fa-envelope fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Email"></span></a></li>
+					<li><a href="#" id="twitter_icon" class="link_icon"><span class="fa fa-twitter fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Twitter"></span></a></li>
+					<li><a href="#" id="github_icon" class="link_icon"><span class="fa fa-github fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Github"></span></a></li>
 				</ul>
 			</div>
 		</div>
