--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										</div>
 										<div class="form-group">
 											<div class="col-md-6">
-												<button class="btn btn-custom pull-right" type="submit" value="Submit" id="send_email_btn">Send</button>
+												<button class="btn btn-primary pull-right" type="submit" value="Submit" id="send_email_btn">Send</button>
 											</div>
 										</div>
 									</form>
