Going to mess around with the CSS layout, background image for the second part of the page...

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	</header>
 
 	<div class="container" id="more_info">
-		<div class="row">
+		<div class="row" id="info_plus_menu">
 			<div class="col-md-3">
 				<span class="fa-stack fa-lg circle" id="circle_1">
 					<i class="fa fa-circle fa-stack-2x"></i>
@@ -164,12 +164,23 @@
 			</div>
 			<div class="clearfix visible-lg"></div>
 		</div>
+<!-- 		<div class="row" id="skyline_row">
+			<div class="container" id="skyline_container">
+				<div class="jumbotron" id="skyline_jumbo"></div>
+			</div>
+		</div> -->
 	</div>
+	
+	<br/><br/>
+
+	<!-- <header class="header">	
+		<div id="city_street_wallpaper"></div>
+	</header> -->
 
 	<!-- <a href="TwitterAPI/index.html">Twitter API Project</a>
 	<a href="my_tweets/index.html">Messing Around with My Twitter Data</a>
 	<a href="tag_cloud/index.html">Tag Cloud</a> -->
-
+	
 	
 	<br/><br/><br/>
 	<footer>
