Got a halfway decent layout started...more tomorrow

--- a/index.html
+++ b/index.html
@@ -90,35 +90,6 @@
 		</div>
 	</nav>
 
-<!-- 	<div class="row">
-		<div class="container-fluid" id="welcomeContainer">
-			<div class="jumbotron col-md-6 centerThese" id="jumbo_1">
-				<h1 id="myName">Vinny Sanchez</h1>
-				<h3 id="careerDescription"><small>Web Development / Data Makeover Artist</small></h3>
-				<img src="v2fly.jpg" alt="Vinny" class="img-responsive img-circle" id="myMug" width="125" height="125">
-			</div>
-			<div class="jumbotron col-md-6" id="jumbo_2">
-				<p id="welcomeText">Hey there.  Take a gander.<br/>See anything you like?  Let me know.</p>
-				<a href="#" class="btn btn-info btn-lg" id="welcomeButton">More Info</a>
-			</div>
-		</div>
-	</div> -->
-
-<!-- 	<div class="row" id="welcome_row">
-		<div class="container" id="welcomeContainer">
-			<div class="jumbotron col-md-12 centerThese" id="jumboWhole">
-				<div class="welcomeDiv col-md-6" id="jumbo_left">
-					<h1 id="myName">Vinny Sanchez</h1>
-					<h3 id="careerDescription"><small>Web Development / Data Makeover Artist</small></h3>
-					<img src="v2fly.jpg" alt="Vinny" class="img-responsive img-circle" id="myMug" width="125" height="125">
-				</div>
-				<div class="welcomeDiv col-md-6" id="jumbo_right">
-					<p id="welcomeText">Hey there.  Take a gander<br/>See anything you like?  Let me know.</p>
-					<a href="#" class="btn btn-info btn-lg" id="welcomeButton">More Info</a>
-				</div>
-			</div>
-		</div>
-	</div> -->
 	<header id="top" class="header">
 		<div class="text-vertical-center">
 			<h1 id="myName">Vinny Sanchez</h1>
@@ -128,69 +99,54 @@
 		</div>
 	</header>
 
-	<div class="container" id="more_info">
-		<div class="row" id="info_plus_menu">
-			<div class="col-md-3">
-				<span class="fa-stack fa-lg circle" id="circle_1">
-					<i class="fa fa-circle fa-stack-2x"></i>
-					<i class="fa fa-bicycle fa-stack-1x fa-inverse"></i>
-				</span>
-				<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem.</p>
-				<br>
+	<div id="more_info_background" class="header">
+		<div class="text-vertical-center">
+			<div class="container" id="more_info">
+				<div class="row" id="info_plus_menu">
+					<div class="col-md-3">
+						<span class="fa-stack fa-lg circle" id="circle_1">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-bicycle fa-stack-1x fa-inverse"></i>
+						</span>
+						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem.</p>
+						<br>
+					</div>
+					<div class="col-md-3">
+						<span class="fa-stack fa-lg circle" id="circle_2">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
+						</span>
+						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe et voluptatum, aliquid. Facilis distinctio eveniet fugit nihil veniam esse ex!</p>
+						<br>
+					</div>
+					<div class="col-md-3">
+						<span class="fa-stack fa-lg circle" id="circle_3">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+						</span>
+						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti magni perferendis animi delectus, voluptate asperiores quidem iure laborum ipsa accusantium.</p>
+						<br>
+					</div>
+					<div class="col-md-3">
+						<ul class="nav nav-pills nav-stacked text-left">
+							<li class="active"><a href="#">Projects</a></li>
+							<li><a href="tag_cloud/index.html">Tweet Cloud</a></li>
+							<li><a href="#">Project 2</a></li>
+							<li><a href="#">Project 3</a></li>
+						</ul>
+					</div>
+					<div class="clearfix visible-lg"></div>
+				</div>
 			</div>
-			<div class="col-md-3">
-				<span class="fa-stack fa-lg circle" id="circle_2">
-					<i class="fa fa-circle fa-stack-2x"></i>
-					<i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
-				</span>
-				<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe et voluptatum, aliquid. Facilis distinctio eveniet fugit nihil veniam esse ex!</p>
-				<br>
-			</div>
-			<div class="col-md-3">
-				<span class="fa-stack fa-lg circle" id="circle_3">
-					<i class="fa fa-circle fa-stack-2x"></i>
-					<i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
-				</span>
-				<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti magni perferendis animi delectus, voluptate asperiores quidem iure laborum ipsa accusantium.</p>
-				<br>
-			</div>
-			<div class="col-md-3">
-				<ul class="nav nav-pills nav-stacked">
-					<li class="active"><a href="#">Projects</a></li>
-					<li><a href="tag_cloud/index.html">Tweet Cloud</a></li>
-					<li><a href="#">Project 2</a></li>
-					<li><a href="#">Project 3</a></li>
-				</ul>
-			</div>
-			<div class="clearfix visible-lg"></div>
+			<footer>
+				<div class="footer text-center">
+					<div class="container">
+						<h4 class="text-muted">tdbts <small>Amplifying the Utility of Your Data</small></h4>
+					</div>
+				</div>
+			</footer>
 		</div>
-<!-- 		<div class="row" id="skyline_row">
-			<div class="container" id="skyline_container">
-				<div class="jumbotron" id="skyline_jumbo"></div>
-			</div>
-		</div> -->
 	</div>
-	
-	<br/><br/>
-
-	<!-- <header class="header">	
-		<div id="city_street_wallpaper"></div>
-	</header> -->
-
-	<!-- <a href="TwitterAPI/index.html">Twitter API Project</a>
-	<a href="my_tweets/index.html">Messing Around with My Twitter Data</a>
-	<a href="tag_cloud/index.html">Tag Cloud</a> -->
-	
-	
-	<br/><br/><br/>
-	<footer>
-		<div class="footer text-center">
-			<div class="container">
-				<h4 class="text-muted">tdbts <small>Amplifying the Utility of Your Data</small></h4>
-			</div>
-		</div>
-	</footer>
-
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
