--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
 							<li><a href="#">FFs</a></li>
 						</ul>
 					</li>
-					<li><a href="#" class="text_link">Portfolio</a></li>
+					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="tag_cloud/index.html">Tweet Cloud</a></li>
+							<li><a href="#"><em>Project 2</em></a></li>
+							<li><a href="#"><em>Project 3</em></a></li>
+						</ul>
+					</li>
 					<li><a href="#" class="text_link">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
