Added keyboard tag to career description, indicated that projects 2 and 3 were coming soon on the right-hand side menu, and added a back to top button in the footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<!-- NAV BAR -->
 	<nav class="navbar navbar-inverse">
 		<div class="container">
 			<div class="navbar-header">
@@ -95,16 +96,18 @@
 			</div>
 		</div>
 	</nav>
-
+	
+	<!-- LANDING PAGE -->
 	<header id="top" class="header">
 		<div class="text-vertical-center">
 			<h1 id="myName">Vinny Sanchez</h1>
-			<h3 id="careerDescription"><strong>Web Development / Data Makeover Artist</strong></h3>
+			<h3 id="careerDescription"><strong><kbd>Web Development / Data Makeover Artist<kbd></strong></h3>
 			<!-- <img src="v2fly.jpg" alt="Vinny" class="img-responsive img-circle" id="myMug" width="125" height="125"> -->
 			<a href="#" class="btn btn-success btn-lg" id="welcomeButton">More Info</a>
 		</div>
 	</header>
-
+	
+	<!-- MORE INFO -->
 	<div id="more_info_background" class="header">
 		<div class="text-vertical-center">
 			<div class="container" id="more_info">
@@ -137,12 +140,15 @@
 						<ul class="nav nav-pills nav-stacked text-left">
 							<li class="active"><a href="#">Projects</a></li>
 							<li><a href="tag_cloud/index.html">Tweet Cloud</a></li>
-							<li><a href="#">Project 2</a></li>
-							<li><a href="#">Project 3</a></li>
+							<li><a href="#"><em>Project 2 (Coming Soon)</em></a></li>
+							<li><a href="#"><em>Project 3 (Coming Soon)</em></a></li>
 						</ul>
 					</div>
 					<div class="clearfix visible-lg"></div>
 				</div>
+			</div>
+			<div id="upTop">
+				<a href="#"><span class="glyphicon glyphicon-circle-arrow-up" data-toggle="tooltip" data-placement="top" title="Back to Top" id="back_to_top"></span></a>
 			</div>
 			<footer>
 				<div class="footer text-center">
