--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<li><a href="#"><em>Project 3</em></a></li>
 						</ul>
 					</li>
-					<li><a href="#" class="text_link">Contact</a></li>
+					<li><a href="contact/contact.html" class="text_link">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#emailModal" role="button" data-toggle="modal" id="mail_icon" class="link_icon"><span class="fa fa-envelope fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Email"></span></a>
@@ -165,4 +165,4 @@
 	<script src="script.js"></script>
 </body>
 
-</html>
+</html>	
