--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="<span id="myNa"></span>vbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -26,15 +26,15 @@
 			</div>
 			<div style="height: 1px;" class="navbar-collapse collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#" class="text_link">Home</a></li>
+					<li class="active"><a href="index.html" class="text_link">Home</a></li>
 					<li class="dropdown"><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">About <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Bio</a></li>
 							<li><a href="#">Resume</a></li>
-							<li><a href="#">Acknowledgments</a></li>
+							<li><a href="#">Acknowledgements</a></li>
 						</ul>
 					</li>
-					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio<span class="caret"></span></a>
+					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="tag_cloud/Tweet_Cloud.html">Tweet Cloud</a></li>
 							<li><a href="#"><em>Project 2</em></a></li>
