Made each folder have an index.html file, and then changed the href attributes to link to FOLDERS, not to files -- tested it, looks good

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 			<div style="height: 1px;" class="navbar-collapse collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html" class="text_link">Home</a></li>
+					<li class="active"><a href="/" class="text_link">Home</a></li>
 					<li class="dropdown"><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">About <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Bio</a></li>
@@ -36,12 +36,12 @@
 					</li>
 					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="tag_cloud/Tweet_Cloud.html">Tweet Cloud</a></li>
+							<li><a href="/tag_cloud/">Tweet Cloud</a></li>
 							<li><a href="#"><em>Project 2</em></a></li>
 							<li><a href="#"><em>Project 3</em></a></li>
 						</ul>
 					</li>
-					<li><a href="contact/contact.html" class="text_link">Contact</a></li>
+					<li><a href="/contact/" class="text_link">Contact</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#emailModal" role="button" data-toggle="modal" id="mail_icon" class="link_icon"><span class="fa fa-envelope fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Email"></span></a>
@@ -139,7 +139,7 @@
 					<div class="col-md-3">
 						<ul class="nav nav-pills nav-stacked text-left">
 							<li class="active"><a href="#">Projects</a></li>
-							<li><a href="tag_cloud/Tweet_Cloud.html">Tweet Cloud</a></li>
+							<li><a href="/tag_cloud/">Tweet Cloud</a></li>
 							<li><a href="#"><em>Project 2 (Coming Soon)</em></a></li>
 							<li><a href="#"><em>Project 3 (Coming Soon)</em></a></li>
 						</ul>
