--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</li>
 					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="/tag_cloud/">Tweet Cloud</a></li>
+							<li><a href="/portfolio/tag_cloud/">Tweet Cloud</a></li>
 							<li><a href="#"><em>Project 2</em></a></li>
 							<li><a href="#"><em>Project 3</em></a></li>
 						</ul>
@@ -139,7 +139,7 @@
 					<div class="col-md-3">
 						<ul class="nav nav-pills nav-stacked text-left">
 							<li class="active"><a href="#">Projects</a></li>
-							<li><a href="/tag_cloud/">Tweet Cloud</a></li>
+							<li><a href="/portfolio/tag_cloud/">Tweet Cloud</a></li>
 							<li><a href="#"><em>Project 2 (Coming Soon)</em></a></li>
 							<li><a href="#"><em>Project 3 (Coming Soon)</em></a></li>
 						</ul>
