getting ready to reduce load time

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="#">Bio</a></li>
 							<li><a href="#">Resume</a></li>
-							<li><a href="#">Acknowledgements</a></li>
+							<li><a href="/about/acknowledgements/">Acknowledgements</a></li>
 						</ul>
 					</li>
 					<li><a href="#" class="dropdown-toggle text_link" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
@@ -99,7 +99,7 @@
 	
 	<!-- LANDING PAGE -->
 	<header id="top" class="header">
-		<div class="text-vertical-center">
+		<div id="landing_page_elements" class="text-vertical-center">
 			<h1 id="myName">Vinny Sanchez</h1>
 			<h3 id="careerDescription"><strong><kbd>Web Development / Data Makeover Artist<kbd></strong></h3>
 			<!-- <img src="v2fly.jpg" alt="Vinny" class="img-responsive img-circle" id="myMug" width="125" height="125"> -->
