Getting ready to alter background image contrast to make text stand out better

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	
 	<!-- MORE INFO -->
 	<div id="more_info_background" class="header">
-		<div class="text-vertical-center">
+		<div id="content_container" class="text-vertical-center">
 			<div class="container" id="more_info">
 				<div class="row" id="info_plus_menu">
 					<div class="col-md-3">
@@ -117,7 +117,7 @@
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-bicycle fa-stack-1x fa-inverse"></i>
 						</span>
-						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem.</p>
+						<p class="columnText">Hey there.  Welcome to my portfolio webpage.  As I dive into the world of programming, exploring concepts and learning many techniques along the way, I will showcase some of my favorite projects here.  I hope you'll find some of what I create intriguing, and maybe one of my little projects will spark some amazing ideas of your own.</p>
 						<br>
 					</div>
 					<div class="col-md-3">
@@ -125,7 +125,7 @@
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
 						</span>
-						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe et voluptatum, aliquid. Facilis distinctio eveniet fugit nihil veniam esse ex!</p>
+						<p class="columnText">In the modern world, we generate vast treasure troves of data throughout our daily, digital lives.  Through smart code and a healthy dose of ingenuity, we can use it all to produce tremendous added value for ourselves and for those we care about.  We are undoubtedly living during one of the most wonderful and exciting chapters of the human saga.</p>
 						<br>
 					</div>
 					<div class="col-md-3">
@@ -133,7 +133,10 @@
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
 						</span>
-						<p class="columnText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti magni perferendis animi delectus, voluptate asperiores quidem iure laborum ipsa accusantium.</p>
+						<p class="columnText">So take a look around, and if you see anything you like, definitely let me know.  I'd love to hear your ideas -- about the webpage, or better yet, about how we can use the information at our fingertips to make life a little sweeter.
+						<br><br>
+						Because at the end of the day, it's your data.  How can you make it work for <em>you</em>?
+						</p>
 						<br>
 					</div>
 					<div class="col-md-3">
