Darkened wallpaper for contrast, changed font family, color, letter spacing, changed slogan text and color, increased size of font awesome stacked icons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class="container" id="more_info">
 				<div class="row" id="info_plus_menu">
 					<div class="col-md-3">
-						<span class="fa-stack fa-lg circle" id="circle_1">
+						<span class="fa-stack fa-2x circle" id="circle_1">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-bicycle fa-stack-1x fa-inverse"></i>
 						</span>
@@ -121,7 +121,7 @@
 						<br>
 					</div>
 					<div class="col-md-3">
-						<span class="fa-stack fa-lg circle" id="circle_2">
+						<span class="fa-stack fa-2x circle" id="circle_2">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
 						</span>
@@ -129,7 +129,7 @@
 						<br>
 					</div>
 					<div class="col-md-3">
-						<span class="fa-stack fa-lg circle" id="circle_3">
+						<span class="fa-stack fa-2x circle" id="circle_3">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
 						</span>
@@ -156,7 +156,7 @@
 			<footer>
 				<div class="footer text-center">
 					<div class="container">
-						<h4 class="text-muted">tdbts <small>Amplifying the Utility of Your Data</small></h4>
+						<h4 id="business_name" class="text-muted slogan">tdbts <small id="slogan">Amplifying Data Utility</small></h4>
 					</div>
 				</div>
 			</footer>
