activated nav bar icon links

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 							</div>
 						</div>
 					</li>
-					<li><a href="#" id="twitter_icon" class="link_icon"><span class="fa fa-twitter fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Twitter"></span></a></li>
-					<li><a href="#" id="github_icon" class="link_icon"><span class="fa fa-github fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Github"></span></a></li>
+					<li><a href="http://www.twitter.com/vrsanchez8717" id="twitter_icon" class="link_icon"><span class="fa fa-twitter fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Twitter"></span></a></li>
+					<li><a href="https://github.com/tdbts" id="github_icon" class="link_icon"><span class="fa fa-github fa-2x bar-icon" data-toggle="tooltip" data-placement="bottom" title="Github"></span></a></li>
 				</ul>
 			</div>
 		</div>
