Starting to revamp the codebase based on what I've learned over the past few months.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/shared/font-awesome-4.2.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="style.css">
 	<title>tdbts: A Humble Page for Humble Projects</title>
@@ -102,7 +102,6 @@
 		<div id="landing_page_elements" class="text-vertical-center">
 			<h1 id="myName">Vinny Sanchez</h1>
 			<h3 id="careerDescription"><strong><kbd>Web Development / Data Makeover Artist<kbd></strong></h3>
-			<!-- <img src="v2fly.jpg" alt="Vinny" class="img-responsive img-circle" id="myMug" width="125" height="125"> -->
 			<a href="#" class="btn btn-success btn-lg" id="welcomeButton">More Info</a>
 		</div>
 	</header>
@@ -164,7 +163,7 @@
 	</div>
 	
 
-	<script src="/shared/jquery-1.11.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="script.js"></script>
 </body>
